--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
             <version>1.3.232</version>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.velocitypowered</groupId>
             <artifactId>velocity-api</artifactId>
             <version>1.1.0-SNAPSHOT</version>
