--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.anvilpowered</groupId>
             <artifactId>anvil-api</artifactId>
             <version>0.2</version>
